--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "18.3.11"
+    "@types/react": "18.3.11",
+    "typescript": "^5.6.3"
   }
 }
